# e84-geoai-common

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.in  pyproject.toml  pyrightconfig.json  requirements.txt
.github/prompts/: plan-addStreamingSupport.prompt.md
.github/workflows/: pypi-publish.yml  pypi-upload.yml  python-test.yml  snyk-scan.yml  testpypi-upload.yml
scripts/: add_dependencies.sh  export_requirements.sh  lint.sh  recreate_venv.sh  test.sh
src/e84_geoai_common/: __init__.py  debugging.py  features.py  geojson.py  geometry.py  tracing.py  util.py
src/e84_geoai_common/embedder/: __init__.py  embedder.py  titan_v2.py
src/e84_geoai_common/llm/: README.md  __init__.py  batch.py  bedrock.py  core.py  extraction.py  util.py
src/e84_geoai_common/llm/agents/: __init__.py  data_extraction_agent.py
src/e84_geoai_common/llm/core/: __init__.py  agent.py  llm.py
src/e84_geoai_common/llm/eval/: __init__.py  core.py  extract_eval.py  tree_distance.py
src/e84_geoai_common/llm/eval/templates/: full_eval_result.md
src/e84_geoai_common/llm/evaluation/: __init__.py  base_eval.py  example_task_eval.py
src/e84_geoai_common/llm/models/: __init__.py  batch.py  claude.py  converse.py  llama.py  nova.py
src/e84_geoai_common/llm/models/batch/: batch_llm.py  iam_utils.py  models.py  s3_utils.py
src/e84_geoai_common/llm/models/claude/: __init__.py  claude.py  streaming.py
src/e84_geoai_common/llm/models/converse/: __init__.py  converse.py  data_content_types.py  msg_types.py  response_types.py  tool_use_types.py
src/e84_geoai_common/llm/tests/: mock_bedrock.py  mock_bedrock_runtime.py  pydantic_compare.py
tests/: test_geometry.py  test_util.py
tests/embedding/models/: constants.py  test_titanv2.py
tests/llm/: test_batch.py  test_extraction.py
tests/llm/core/: test_llm.py
tests/llm/eval/: test_tree_distance.py  test_tree_edit_distance.py
tests/llm/models/: long_system_prompt.txt  test_batch.py  test_claude.py  test_converse.py  test_llama.py  test_nova.py  utils.py
tests/llm/models/serialization/: test_claude_serialization.py  test_converse_serialization.py  test_nova_serialization.py
