[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "e84-geoai-common"
authors = [{ name = "Jason Gilman", email = "jason@element84.com" }]
maintainers = [{ name = "Jason Gilman", email = "jason@element84.com" }]
description = "Contains common Geospatial AI/ML code for Element 84 projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "boto3>=1.35.20",
  "boto3-stubs[bedrock-runtime]>=1.35.20",
  "pydantic>=2.9.1",
  "shapely>=2.0.6",
  "types-shapely>=2.0.0.20240820"
]
dynamic = ["version"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths=[
  "tests"
]

[project.urls]
Github = "https://github.com/Element84/e84-geoai-common"

[project.optional-dependencies]
debugging = [
    "folium>=0.17.0"
]
dev = [
  "pytest>=8.3.3",
  "ipykernel>=6.29.5",
  "black>=24.8.0",
  "pyright>=1.1.381",
  "build>=1.2.2",
  "pre-commit>=3.8.0",
  "pre-commit-hooks>=4.6.0"
]
